disk: stm32_sdmmc: make pwr-gpios optional
Not every board will need to enable a gpio to power the sdmmc, so make
it optional.

Signed-off-by: Anthony Brandon <anthony@amarulasolutions.com>

--- a/dts/bindings/mmc/st,stm32-sdmmc.yaml
+++ b/dts/bindings/mmc/st,stm32-sdmmc.yaml
@@ -16,5 +16,5 @@ properties:
         description: Card Detect pin
     pwr-gpios:
         type: phandle-array
-        required: true
+        required: false
         description: Power pin
