disk: stm32_sdmmc: make cd-gpios optional
The card detect may not be connected on every board. In order for the
sdmmc to still be used on those assume that a card is present if no card
detect gpio is set.

Signed-off-by: Anthony Brandon <anthony@amarulasolutions.com>

--- a/dts/bindings/mmc/st,stm32-sdmmc.yaml
+++ b/dts/bindings/mmc/st,stm32-sdmmc.yaml
@@ -12,7 +12,7 @@ properties:
         required: true
     cd-gpios:
         type: phandle-array
-        required: true
+        required: false
         description: Card Detect pin
     pwr-gpios:
         type: phandle-array
