boards: arm: stm32l496g_disco: enable sdmmc support
Update the dtsi for stm32l471 (which the higher SoCs are based on) to
support the stm32-sdmmc disk access device. Enable the device for the
stm32l496g_disco board, and update the pinmuxing.
Note that the stm32l496g_disco board also has a card detect gpio
(MFX_GPIO8), but this is not supported yet. When not specified the
driver will assume a card is present.

Signed-off-by: Anthony Brandon <anthony@amarulasolutions.com>

--- a/dts/arm/st/l4/stm32l471.dtsi
+++ b/dts/arm/st/l4/stm32l471.dtsi
@@ -188,5 +188,12 @@
 				#pwm-cells = <2>;
 			};
 		};
+
+		sdmmc1: sdmmc1 {
+			compatible = "st,stm32-sdmmc";
+			clocks = <&rcc STM32_CLOCK_BUS_APB2 0x00000400>;
+			status = "disabled";
+			label = "SDMMC1";
+		};
 	};
 };
