--- a/samples/subsys/fs/fat_fs/sample.yaml
+++ b/samples/subsys/fs/fat_fs/sample.yaml
@@ -4,4 +4,5 @@ tests:
   sample.filesystem.fat_fs:
     build_only: true
     platform_whitelist: nrf52840_blip olimexino_stm32 mimxrt1050_evk
+        stm32l496g_disco
     tags: filesystem
